crates/atlas-runtime/tests/snapshots/frontend_syntax__function_call_with_args.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Call:
            callee:
              Identifier:
                name: foo
                span:
                  start: 0
                  end: 3
            args:
              - Literal:
                  - Number: 1
                  - start: 4
                    end: 5
              - Literal:
                  - Number: 2
                  - start: 7
                    end: 8
              - Literal:
                  - Number: 3
                  - start: 10
                    end: 11
            span:
              start: 0
              end: 12
        span:
          start: 0
          end: 13
