crates/atlas-runtime/tests/snapshots/frontend_syntax__json_extraction_as_string.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Member:
            target:
              Index:
                target:
                  Identifier:
                    name: json
                    span:
                      start: 0
                      end: 4
                index:
                  Single:
                    Literal:
                      - String: user
                      - start: 5
                        end: 11
                span:
                  start: 0
                  end: 12
            member:
              name: as_string
              span:
                start: 13
                end: 22
            args: []
            span:
              start: 0
              end: 24
        span:
          start: 0
          end: 25
