crates/atlas-runtime/tests/snapshots/frontend_syntax__let_declaration.snap
---
source: crates/atlas-runtime/tests/frontend_syntax.rs
expression: program
---
items:
  - Statement:
      VarDecl:
        mutable: false
        name:
          name: x
          span:
            start: 4
            end: 5
        type_ref: ~
        init:
          Literal:
            - Number: 42
            - start: 8
              end: 10
        span:
          start: 0
          end: 11
